--- a/docs/main.tex
+++ b/docs/main.tex
@@ -13,7 +13,6 @@
 \usepackage{colortbl}
 \usepackage{tabularx}
 \usepackage{fancyhdr}
-\usepackage{ulem}
 \usepackage{amsmath, amssymb, amsfonts}
 \usepackage{algorithmic}
 \usepackage{textcomp}
@@ -21,7 +20,11 @@
 \usepackage[ipaex]{pxchfon}
 \usepackage{otf}
 \usepackage[round]{natbib}
-\bibliographystyle{plainnat}
+\usepackage{url}
+
+
+% URLのフォントを本文と同じに変更
+\renewcommand{\UrlFont}{\rmfamily}
 
 \usepackage[top=30truemm, bottom=30truemm, left=25truemm, right=25truemm]{
     geometry
@@ -67,16 +70,17 @@
     \end{center}
     
     % 学生情報
-    \noindent
-    グローバル地域文化学部 アジア・太平洋コース \\
-    学生ID : 1122192047 氏名: 種村尚大 \\
-    指導教員 : \CID{8443}田智子 \\[15mm]
+    \begin{center}
+        グローバル地域文化学部 アジア・太平洋コース \\
+        学生ID : 1122192047 氏名: 種村尚大 \\
+        指導教員 : \CID{8443}田智子 \\[15mm]
+    \end{center}
     
     % 論文要旨
     \noindent
     {\Large \textbf{論文要旨}} \\[5mm]
     \quad 本研究は、2024年10月1日に発生したイスラエルによるレバノン侵攻を契機に、SNS上の議論がどのように形成され、進展していくのかを探ることを目的とした。具体的には、Redditの投稿データを用い、投稿数の変動、感情的傾向、トピックの変遷を分析することで、SNSが紛争に与える影響を多角的に検討した。\\
-    \quad 研究の結果、投稿数が急増する一方で、センチメントスコアがポジティブにシフトする現象が確認された。また、動的トピックモデリングを用いて、議論が「紛争と軍事行動」から「規則や投稿削除」といったメタ的テーマへと移行する過程を明らかにした。この分析を通じて、SNSが国際紛争におけるデジタル公共圏として機能する一方で、議論の構造や偏りに関する課題があることも示された。本研究の知見は、SNSを活用した情報戦略や政策設計における実践的な示唆を提供するものである。 \\[20mm]
+    \quad 研究の結果、投稿数が急増する一方で、センチメントスコアがポジティブにシフトする現象が確認された。また、動的トピックモデリングを用いて、議論が「紛争と軍事行動」から「規則や投稿削除」といったメタ的テーマへと移行する過程を明らかにした。この分析を通じて、SNSが国際紛争において重要な役割を果たす一方で、議論の構造や偏りに関する課題があることも示された。本研究の知見は、SNSを活用した情報戦略や政策設計における実践的な示唆を提供するものである。 \\[20mm]
     
     % キーワード
     \noindent
@@ -104,7 +108,7 @@
 
     21世紀における紛争の様相は、従来の軍事的な衝突に加え、情報空間における戦いの重要性が増している。特に、ソーシャルネットワーキングサービス（SNS）は、紛争に関する情報発信や議論の場として機能し、世論形成に強い影響を与えている。これらのプラットフォームは、リアルタイムでの情報共有、国際的な議論の可視化、多様な声の拡散を可能にしている。
 
-    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、2024年時点で日毎のアクティブユーザー数が約9720万人に達している\citep{reddit2024third-quater-results}。その利用者層は主に北米とヨーロッパに集中しており\citep{statista2024reddit-country}、ユーザーの約44\%が18～29歳と比較的若い世代に偏っている\citep{statista2024reddit-age}。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある\citep{statista2024reddit-gender}。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである\citep{pew2024reddit-educated}。
+    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、2024年時点で日毎のアクティブユーザー数が約9720万人に達している\citep{reddit2024third-quarter-results}。その利用者層は主に北米とヨーロッパに集中しており\citep{statista2024reddit-country}、ユーザーの約44\%が18～29歳と比較的若い世代に偏っている\citep{statista2024reddit-age}。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある\citep{statista2024reddit-gender}。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである\citep{pew2024reddit-educated}。
 
     このプラットフォームの最大の特徴は、匿名性と分散型のコミュニティ構造にある。Redditは、サブレディットと呼ばれる膨大な数の専門的なコミュニティで構成されており、それぞれが特定のトピックや興味に基づいて議論を展開する。投稿やコメントは、ユーザーからの評価（アップボートまたはダウンボート）によってランキングされるため、コミュニティ全体の関心や優先順位が自然に反映される仕組みが採用されている。この構造は、特定の話題について多様な視点を集約し、リアルタイムで議論を活発化させる基盤を提供している。
 
@@ -130,14 +134,14 @@
     \chapter{SNSにおける世論形成と国際紛争に関する先行研究}
 
     \section{SNSと世論形成}
-    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている\citep{shrinky2011}。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている\citep{howard-hussain2013}。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
+    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている\citep{shirky2011}。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている\citep{hussain2013democracy}。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
 
-    一方で、SNSにおける情報流通には限界も指摘されている。\citet{ulen2001democracy}やPariser\citet{pariser2011filter}は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
+    一方で、SNSにおける情報流通には限界も指摘されている。\citet{sunstein2008democracy}やPariser\citet{pariser2011filter}は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
 
     さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている\citep{allcott-gentzkow2017}。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
-    SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。\citet{howard-hussain2013}は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、\citet{zeitzoff2017}の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
+    SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。\citet{hussain2013democracy}は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、\citet{zeitzoff2017}の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
 
     さらに、SNSは国際的な議論を加速させるツールとしても機能している。イスラエルとパレスチナの紛争では、世界中のユーザーがSNSを通じて意見を発信し、国際世論が紛争当事者への外交的プレッシャーとして作用するケースが見られる。これにより、SNSは紛争解決や国際支援のプロセスに間接的な影響を及ぼしている。
 
@@ -151,7 +155,7 @@
     さらに、Redditのサブレディットは、特定のトピックや価値観を共有するユーザーが集まることで結束を強化する特徴を持つ。\citet{massanari2015participatory}は、Redditの匿名性と分散型構造が、多様な意見を反映しつつも、特定のコミュニティにおける共有された価値観や視点の強化につながると指摘している。\citet{gaffney2018caveat}も、Redditのコミュニティ構造が特定の議論を深める場として機能する一方で、ユーザー間の結束を促進する仕組みを提供していることを示している。
 
     \section{先行研究との関係}
-    これまでの先行研究は、SNSが国際紛争や政治的動員に与える影響について、SNS全般の役割や、主にTwitterやFacebookといったプラットフォームの影響を分析してきた。たとえば、\citet{shrinky2011}や\citet{howard-hussain2013}は、SNSがプロテスタントや社会運動の組織化を支援し、情報拡散を迅速化するツールとしての役割を強調している。また、\citet{zeitzoff2017}はTwitterを用いて、紛争当事者が戦略的なコミュニケーションを通じて国際的な支持を獲得する手段としてSNSを活用していることを示している。しかし、これらの研究は、特定のプラットフォームの独自性や、ユーザー間の議論ダイナミクスの詳細には踏み込んでおらず、SNSが個々のユーザーやコミュニティの世論形成にどのように作用するかについては限定的である。
+    これまでの先行研究は、SNSが国際紛争や政治的動員に与える影響について、SNS全般の役割や、主にTwitterやFacebookといったプラットフォームの影響を分析してきた。たとえば、\citet{shirky2011}や\citet{hussain2013democracy}は、SNSがプロテスタントや社会運動の組織化を支援し、情報拡散を迅速化するツールとしての役割を強調している。また、\citet{zeitzoff2017}はTwitterを用いて、紛争当事者が戦略的なコミュニケーションを通じて国際的な支持を獲得する手段としてSNSを活用していることを示している。しかし、これらの研究は、特定のプラットフォームの独自性や、ユーザー間の議論ダイナミクスの詳細には踏み込んでおらず、SNSが個々のユーザーやコミュニティの世論形成にどのように作用するかについては限定的である。
 
     本研究は、これらの先行研究に対して以下の3つの点の視点を示すという、学術的意義を有する。
 
@@ -343,8 +347,8 @@
 
     以上の結果は、侵攻後に特定のサブレディットにおいて投稿数が有意に増加したことを示している。この変化は表\ref{tab:ols_counts_results}における交互作用効果によって裏付けられている。
 
-    \section{センチメントスコアの変化: WLS分析結果}
-    センチメントスコアについても、侵攻前後の変化を分析した。Table~\ref{tab:wls_results}に示すWLS回帰分析の結果によると、対象サブレディットにおけるセンチメントスコアは、全体的にポジティブな方向にシフトしていることが確認された。ただし、侵攻後全体の変化（\textit{post\_treatment}）は統計的に有意ではないが、交互作用効果（\textit{interaction}）は統計的に有意であった。
+    \section{センチメントスコアの変化: OLS分析結果}
+    センチメントスコアについても、侵攻前後の変化を分析した。表\ref{tab:wls_results}に示すOLS回帰分析の結果によると、対象サブレディットにおけるセンチメントスコアは、全体的にポジティブな方向にシフトしていることが確認された。ただし、侵攻後全体の変化（\textit{post\_treatment}）は統計的に有意ではないが、交互作用効果（\textit{interaction}）は統計的に有意であった。
 
     \subsection*{回帰結果の概要}
     以下に回帰結果を示す。
@@ -363,7 +367,7 @@
         \hline
     \end{tabular}
     }
-    \caption{センチメントスコアの変化に関するWLS回帰結果}
+    \caption{センチメントスコアの変化に関するOLS回帰結果}
     \label{tab:wls_results}
     \end{table}
 
@@ -419,21 +423,19 @@
 
     本研究は、2024年10月1日のイスラエルによるレバノン侵攻がReddit上の議論やユーザーの反応に与えた影響を明らかにし、SNSが国際紛争に果たす役割を考察するものである。本章では、「はじめに」で提示した仮説と分析結果を関連付けつつ、投稿数、感情的傾向、トピックの変遷を統合的に議論する。
 
-    \section{SNSとデジタル公共圏の形成}
-    分析結果は、投稿数の急増とセンチメントスコアの変化がRedditをデジタル公共圏として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
+    \section{Redditにおける議論の活性化と情報共有の特徴}
+    分析結果は、投稿数の急増とセンチメントスコアの変化が、Redditを情報共有と議論の活性化を促進する場として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
 
-    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\citep{habermas1991structural}に照らして考えると、いくつかの特徴が明らかになる。
-
-    まず、議論の活性化と新規ユーザーの流入が挙げられる。投稿数の急増とセンチメントスコアのポジティブな変化を関連付けると、侵攻後に新規ユーザーが流入し、議論を活性化させた可能性が高い。これにより、ネガティブなセンチメントが緩和される効果が生じたと考えられる。この現象は仮説2の修正を必要とするが、SNSが紛争の初期段階で多様な意見を取り込む力を持つことを示している。
+    投稿数の増加は、紛争がSNS上の議論を再編するプロセスを示している。特に、新規ユーザーの流入による議論の活性化が、センチメントスコアのポジティブな変化に寄与した可能性が考えられる。このような現象は、SNSが紛争の初期段階において、従来のネガティブな感情を緩和し、多様な意見を受け入れる場として機能することを示している。
     
-    次に、情報の迅速な共有が特徴として挙げられる。紛争関連サブレディットにおける投稿数の急増は、情報が迅速に共有されると同時に、議論が特定のテーマに集中することを示している。これは、公共圏がオンラインに移行する際、特に危機的状況でその傾向が顕著になることを示唆している。
+    また、情報の迅速な共有は、SNSにおける議論の特徴の一つである。紛争関連サブレディットにおける投稿数の急増は、特定テーマへの集中と、それに伴う議論の偏りが同時に進行することを示唆している。特に、危機的状況下では、SNSが迅速な情報流通を可能にする一方で、意見の分極化や特定の価値観の優勢が進む可能性がある。
     
-    ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\citep{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
+    ただし、この結果をSNS全体の特徴として一般化することには限界がある。アルゴリズムやエコーチェンバー現象\citep{pariser2011filter}が意見の多様性を制約する可能性があり、SNS上の議論の健全性にどのように影響するかは、さらに検討する必要がある。
 
     \section{感情的傾向の変化と情動の役割}
     センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）とは異なる結果を示した。ただし、この変化は0.0528という非常に小さな値であることから、慎重に解釈する必要がある。
     
-    まず、この小幅なポジティブシフトは、新規ユーザーの投稿傾向や、既存の議論に対する微細なバイアスの影響を受けた可能性がある。新規ユーザーが比較的中立的または肯定的な意見を投稿することで、全体的なセンチメントの傾向がわずかに変化したことが考えられる。ただし、この現象が議論全体に与える影響の大きさや持続性は不明であり、さらなるデータ分析が求められる。
+    まず、この小幅なポジティブシフトは、新規ユーザーの投稿傾向や、既存の議論に対する微細なバイアスの影響を受けた可能性がある。そして、新規ユーザーが比較的中立的または肯定的な意見を投稿することで、全体的なセンチメントの傾向がわずかに変化したことが考えられる。ただし、この現象が議論全体に与える影響の大きさや持続性は不明であり、さらなるデータ分析が求められる。
     
     また、センチメントスコアの変化には、文化的および地理的な要因が寄与している可能性がある。たとえば、紛争地域外のユーザーが人道的支援や平和的解決を呼びかける投稿を行ったことで、ポジティブなトーンがわずかに増加した可能性がある。こうした投稿は、特定の地域や文化的背景に基づく多様な視点が反映されていることを示唆している。ただし、この仮説を裏付けるには、投稿の内容や出自についてより詳細な分析が必要である。
     
@@ -444,23 +446,23 @@
     
     紛争直後には「軍事行動」や「人道危機」が主要なトピックとして浮上し、議論の焦点が緊急性の高いテーマに集中していた。この急性期における議論の集中化は、SNSが紛争時において迅速な情報共有とリアルタイムの意思形成の場として機能することを示している。
     
-    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、「議論疲れ」や「分極化」\citep{sunstein2001republic}が進行した可能性が示唆される。このような議論の移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場としての役割を果たしていることを意味している\citep{habermas1991structural}。
+    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、「議論疲れ」\citep{sunstein2001republic}や「分極化」\citep{sunstein2001republic}が進行した可能性が示唆される。こうしたメタ的議論の増加は、SNSが情報共有を超え、プラットフォーム内でのルールや構造に対する反省的な議論の場としても機能していることを意味している。
 
-    これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである\citep{pariser2011filter}。
+    これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その特有の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存していると考えられるため、SNS全体の特徴として一般化するには慎重さが求められる。
 
     \section{包括的結論: 仮説と結果の統合}
-    本研究の分析結果は、SNSが国際紛争において多層的な役割を果たすことを示している。まず、新規ユーザーの流入が議論の内容と感情的トーンに影響を与えることで、デジタル公共圏を再編する役割を果たしていることが明らかになった。また、紛争の急性期において、情報共有と議論の集中化が進み、SNSがリアルタイムでの社会的合意形成を可能にする場として機能していることが確認された。
+    本研究の分析結果は、SNSが国際紛争において多層的な役割を果たすことを示している。まず、新規ユーザーの流入が議論の内容と感情的トーンに影響を与えることで、オンライン上の議論空間を再編する役割を果たしていることが明らかになった。また、紛争の急性期において、情報共有と議論の集中化が進み、SNSがリアルタイムでの社会的合意形成を可能にする場として機能していることが確認された。
     
     さらに、時間の経過とともに議論疲れや分極化が進行し、SNSが単なる情報共有の場にとどまらず、自己批判的な文化を育む場としての役割を果たしていることが示唆された。これらの観点から、SNSは国際紛争の動態において多面的な影響を及ぼす重要なプラットフォームであると結論付けられる。
 
-    ただし、これらの結論はReddit上の観察結果に基づくものであり、他のSNSや異なる文化圏では異なる動態が見られる可能性がある。本研究の結果を一般化することは慎重を要する一方で、SNSを用いた紛争対応策の設計や運営における一つの出発点として意義を持つ。
+    ただし、これらの結論はReddit上の観察結果に基づくものであり、他のSNSや異なる文化圏では異なる動態が見られる可能性がある。本研究の結果を一般化することは慎重を要する一方で、SNSを用いた紛争対応策の設計や運営における一つの出発点として意義があると考えられる。
 
-    \chapter{まとめ}
+    \chapter{結論}
     
     \section{研究の要約}
     本研究は、2024年10月1日のイスラエルによるレバノン侵攻を契機として、Reddit上における議論の変遷を分析し、SNSが国際紛争に果たす役割を明らかにすることを目的として実施された。投稿数の変化、センチメントスコアの推移、トピックの変遷という3つの観点から多角的なデータ分析を行った結果、以下の知見が得られた。
     
-    まず、投稿数の急増は、新規ユーザーの流入や紛争関連情報の共有が活発化したことを示しており、SNSがデジタル公共圏として機能する一端を明らかにした。また、センチメントスコアの分析からは、紛争直後に議論がポジティブな方向へシフトする現象が確認された。この変化は、新規ユーザーによる中立的または肯定的な意見の流入が要因であると考えられる。
+    まず、投稿数の急増は、新規ユーザーの流入や紛争関連情報の共有が活発化したことを示しており、SNSが重要な情報共有の場として機能していることを明らかにした。また、センチメントスコアの分析からは、紛争直後に議論がポジティブな方向へシフトする現象が確認された。この変化は、新規ユーザーによる中立的または肯定的な意見の流入が要因であると考えられる。
     
     さらに、動的トピックモデリング（DTM）の結果、議論の焦点が「軍事行動」や「人道危機」から「規則」や「投稿削除」といったメタ的議論へと移行する傾向が観察された。これらの知見は、SNSが紛争時における情報共有や議論の進化において重要な役割を果たしていることを示している。
 
@@ -470,7 +472,7 @@
     本研究で得られた知見にはいくつかの限界があり、それらを克服するための具体的な課題が残されている。
 
     \subsection{データの一般化可能性の制約}
-    本研究の分析対象はRedditに限定されており、他のSNSや異なる文化圏における議論動態を考慮していない。たとえば、TwitterやFacebookといった他のプラットフォームでは、リアルタイム性やアルゴリズムの影響が議論の形成に大きな役割を果たす可能性がある。また、言語や文化的背景の異なるユーザーが議論にどのように影響を与えるかも未検討である。これを解決するためには、複数のプラットフォームを対象とし、異文化間での比較研究を進める必要がある。
+    本研究の分析対象はRedditに限定されており、他のSNSや異なる文化圏における議論動態を考慮していない。たとえば、X (旧Twitter) やFacebookといった他のプラットフォームでは、リアルタイム性やアルゴリズムの影響が議論の形成に大きな役割を果たす可能性がある。また、言語や文化的背景の異なるユーザーが議論にどのように影響を与えるかも未検討である。これを解決するためには、複数のプラットフォームを対象とし、異文化間での比較研究を進める必要がある。
 
     \subsection{感情分析の精度向上}
     感情分析に使用したVADERは、SNSデータに特化して設計されている一方で、皮肉や隠喩、文化的文脈に依存する表現を十分に捉えられない可能性がある。この限界を克服するため、深層学習を用いた感情分析モデルの導入や、人間の評価によるデータの補正を組み合わせることが有効である。また、言語的多様性を考慮し、多言語対応の感情分析モデルを採用することで、分析の信頼性をさらに高めることが期待される。
@@ -488,15 +490,15 @@
     
     さらに、後期におけるメタ議論の増加と議論疲れの進行を踏まえ、プラットフォーム運営者は議論の健全性を維持するためのモデレーション手法を見直す必要がある。たとえば、長期間続く議論には、新たな視点を提供するためのキュレーション機能や、議論の焦点を再設定する仕組みを導入することが効果的であると考えられる。
     
-    最後に、本研究の結果は、SNSがデジタル公共圏として機能する可能性を示唆している。一方で、公共圏の形成には、特定の視点が過剰に強調されないような設計が求められる。この点でプラットフォーム運営者は、アルゴリズムの透明性を向上させ、多様な意見が均等に可視化される仕組みを開発することが求められる。
+    最後に、本研究の結果は、SNSが社会的な議論の場として機能する可能性を示唆している。一方で、健全な議論空間の形成には、特定の視点が過剰に強調されないような設計が求められる。この点でプラットフォーム運営者は、アルゴリズムの透明性を向上させ、多様な意見が均等に可視化される仕組みを開発することが求められる。
     
-    \section{結論}
-    本研究は、2024年のイスラエルによるレバノン侵攻を題材に、Redditにおける投稿データを分析することで、SNSが国際紛争において果たす役割とその限界を明らかにした。本研究の成果は、デジタル時代における公共圏の新たな形態を理解するための基盤を提供するとともに、SNS運営者や政策立案者がより健全で多様な議論環境を構築するための実践的な示唆を与えるものである。
+    \section{終わりに}
+    本研究は、2024年のイスラエルによるレバノン侵攻を題材に、Redditにおける投稿データを分析することで、SNSが国際紛争において果たす役割とその限界を明らかにした。本研究の成果は、デジタル時代における新たな社会的議論の形態を理解するための基盤を提供するとともに、SNS運営者や政策立案者がより健全で多様な議論環境を構築するための実践的な示唆を与えるものである。
 
     %=====================================================================================
 
     \addcontentsline{toc}{chapter}{参考文献} %章立てせずに目次に追加するおまじない
     \renewcommand{\bibname}{参考文献} %これがないと，タイトルが「関連図書」になってしまう
-    \bibliographystyle{chicago} %本文に\citep{}を入れることで，参考文献表示
+    \bibliographystyle{myplainnat.bst} %本文に\citep{}を入れることで，参考文献表示
     \bibliography{main.bib} %bibtexファイルの読み込み
 \end{document}
